src/snapshots/alma__infer__tests__test_infer_expression__property_access.snap
---
source: src/infer.rs
assertion_line: 1873
expression: "infer(r#\"{ age = 1, msg = \"Hello\" }.age\"#)"

---
Input:

{ age = 1, msg = "Hello" }.age

---
Output:

Float
