src/snapshots/alma__infer__tests__test_infer_expression__property_access_shorthand_lambda-2.snap
---
source: src/infer.rs
assertion_line: 1882
expression: "infer(\".name { name = 1 }\")"

---
Input:

.name { name = 1 }

---
Output:

Float
