src/snapshots/alma__infer__tests__test_infer_expression__record_literal-2.snap
---
source: src/infer.rs
assertion_line: 1866
expression: "infer(r\"{ x = 1 }\")"

---
Input:

{ x = 1 }

---
Output:

{ x : Float }
