src/snapshots/alma__infer__tests__test_infer_expression__record_literal-3.snap
---
source: src/infer.rs
assertion_line: 1867
expression: "infer(r\"{ x = 1, y = True }\")"

---
Input:

{ x = 1, y = True }

---
Output:

{ x : Float, y : Bool }
